tests/NormalTests/paczka1/fuzzy1/38060441.err
Error in line 3: S440 S440 65,5
Error in line 16: Wzhl8pH68k S538 53,7
Error in line 25: o40x5vaTjRT A657 39,0
Error in line 26: Wzhl8pH68k S921 77,8
Error in line 34: S440 S	38 97,2
Error in line 28: o40x5vaTjRT S921 52,8
Error in line 37: o40x5vaTjRT S538 10,3
